resolve too much bugs

--- a/project/src/app/profile-user/profile-user.page.scss
+++ b/project/src/app/profile-user/profile-user.page.scss
@@ -1,10 +1,8 @@
 ion-content {
   --background: none;
-  background-image: linear-gradient(
-    117deg,
-    rgba(251, 195, 74, 1),
-    rgba(241, 102, 129, 1)
-  ) !important;
+  background-image: linear-gradient(117deg,
+      rgba(251, 195, 74, 1),
+      rgba(241, 102, 129, 1)) !important;
   background-position: center top;
   background-size: 100% 220px;
   background-repeat: no-repeat;
