--- a/project/src/app/request/request.page.scss
+++ b/project/src/app/request/request.page.scss
@@ -172,3 +172,10 @@
 .customToast {
   background: linear-gradient(155deg, #fbc34a, #f05d87);
 }
+
+.spin {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
